--- a/frobshop/templates/base2.html
+++ b/frobshop/templates/base2.html
@@ -89,35 +89,9 @@
  <!-- End Header -->
 
  <!-- Start Content Area-->
-  <div class="content-area">
-    <div class="container">
-         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-   
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="images/slider-1.jpg" alt="">
-
-    </div>
-    <div class="item">
-      <img src="images/slider-2.jpg" alt="">
-      
-    </div>
-    
-  </div>
-
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-  </a>
-</div>
-      </div>
-  </div>
+{% block content2 %}
+  {% include "verecom/partials/home-content.html" %}
+{% endblock content2 %}
   <!-- End Content Area -->
    
   <!-- Start Footter Area -->
