--- a/frobshop/templates/layout.html
+++ b/frobshop/templates/layout.html
@@ -1,4 +1,4 @@
-{% extends "base2.html" %}
+{% extends "base.html" %}
 {% load compress %}
 {% load promotion_tags %}
 
@@ -49,7 +49,7 @@
         </div>
     {% endblock %}
 
-    {% include "partials/footer.html" %}
+
 {% endblock %}
 
 {% block extrascripts %}
