--- a/frobshop/templates/promotions/new-homeview.html
+++ b/frobshop/templates/promotions/new-homeview.html
@@ -1,15 +1,7 @@
 {% extends "layout_2_col.html" %}
 {% load i18n %}
 
-{% block navigation %}
-    {% include "partials/nav_primary.html" with expand_dropdown=1 %}
-{% endblock %}
 
-{% block header %}{% endblock %}
-
-{% block column_left %}
-{% endblock %}
-
-{% block content %}
-<h1>Hello world</h1>
-{% endblock content %}
+{% block layout %}
+	{% include "verecom/partials/home-content.html" %}
+{% endblock layout %}
