home page added custom.css and fixed some desgin issue.

--- a/frobshop/templates/customer/login_registration.html
+++ b/frobshop/templates/customer/login_registration.html
@@ -2,12 +2,13 @@
 {% load i18n %}
 {% block layout %}
 <div class="container">
+    
 
     {% block breadcrumbs %}
         <ul class="breadcrumb">
             <li>
                 <a href="{{ homepage_url }}">{% trans 'Home' %}</a>
-                <span class="divider">/</span>
+                <span class="divider"></span>
             </li>
             <li class="active">{% trans 'Login or register' %}</li>
         </ul>
