--- a/frobshop/templates/customer/baseaccountpage.html
+++ b/frobshop/templates/customer/baseaccountpage.html
@@ -12,11 +12,11 @@
     <ul class="breadcrumb">
         <li>
             <a href="{{ homepage_url }}">{% trans 'Home' %}</a>
-            <span class="divider">/</span>
+            <span class="divider"></span>
         </li>
         <li>
             <a href="{% url 'customer:summary' %}">{% trans 'Account' %}</a>
-            <span class="divider">/</span>
+            <span class="divider"></span>
         </li>
         {% block extra_breadcrumbs %}{% endblock %}
         <li class="active">{{ page_title }}</li>
