--- a/frobshop/templates/search/results.html
+++ b/frobshop/templates/search/results.html
@@ -13,11 +13,11 @@
     <ul class="breadcrumb">
         <li>
             <a href="{{ homepage_url }}">{% trans "Home" %}</a>
-            <span class="divider">/</span>
+            <span class="divider"></span>
         </li>
         <li>
             {% trans "Search" %}
-            <span class="divider">/</span>
+            <span class="divider"></span>
         </li>
         <li class="active">"{{ query }}"</li>
     </ul>
