--- a/frobshop/templates/base2.html
+++ b/frobshop/templates/base2.html
@@ -8,7 +8,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
  
-    <title>Saksfifthavenue :: Home</title>
+    <title>
+      Saksfifthavenue :: {% block title %}{{ shop_name }} - {{ shop_tagline }}{% endblock %}
+    </title>
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -116,6 +118,11 @@
 <script type="text/javascript">
 	$('.carousel').carousel()
 </script>
-
+<script type="text/javascript">
+    $(function() {
+        oscar.init();
+        {% block onbodyload %}{% endblock %}
+    });
+</script>
   </body>
 </html>
