--- a/statics/verecom/css/custom.css
+++ b/statics/verecom/css/custom.css
@@ -23,3 +23,7 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 .alert .close {
 	right: 0px !important;
 }
+.menu-con {
+	margin-left: 113px !important;
+	float: none !important;
+}
