--- a/frobshop/templates/layout2.html
+++ b/frobshop/templates/layout2.html
@@ -7,29 +7,24 @@
     
     {# Main content of page - other layout templates may override this block #}
     {% block content_wrapper %}
-        <div class="container-fluid page">
-            <div class="page_inner">
-                {% block breadcrumbs %}{% endblock %}
-                {% block header %}
-                    <div class="page-header action">
-                        <h1>{% block headertext %}{% endblock %}</h1>
-                    </div>
-                {% endblock %}
-                {% include "partials/alert_messages.html" %}
-                {% block subnavigation %}{% endblock %}
-                <div class="content">
-                    {% block subheader %}{% endblock subheader %}
+        <div class="container page">
+            {% block breadcrumbs %}{% endblock %}
+            {% block header %}
+            {% endblock %}
+            {% include "partials/alert_messages.html" %}
+            {% block subnavigation %}{% endblock %}
+            <div class="content">
+                {% block subheader %}{% endblock subheader %}
 
-                    {# Render promotions #}
-                    <div id="promotions">
-                        {% for promotion in promotions_page %}
-                            {% render_promotion promotion %}
-                        {% endfor %}
-                    </div>
-
-                    {# Div exists for AJAX updates to entire content section #}
-                    <div id="content_inner">{% block content %}{% endblock %}</div>
+                {# Render promotions #}
+                <div id="promotions">
+                    {% for promotion in promotions_page %}
+                        {% render_promotion promotion %}
+                    {% endfor %}
                 </div>
+
+                {# Div exists for AJAX updates to entire content section #}
+                <div id="content_inner">{% block content %}{% endblock %}</div>
             </div>
         </div>
     {% endblock %}
