--- a/frobshop/templates/promotions/new-homeview.html
+++ b/frobshop/templates/promotions/new-homeview.html
@@ -1,7 +1,8 @@
 {% extends "layout2.html" %}
+{% load category_tags %}
 {% load i18n %}
 
 
 {% block layout %}
-	{% include "verecom/partials/home-content.html" %}
+	{% include "verecom/home-content.html" %}
 {% endblock layout %}
