--- a/frobshop/templates/verecom/partials/product.html
+++ b/frobshop/templates/verecom/partials/product.html
@@ -8,58 +8,52 @@
 
 {% block product %}
 
-    <div class="product col-md-3">
-    {% if product.primary_image %}
-        <div class="product-img thumbnail">
-        
-            {% with image=product.primary_image %}
-                {% thumbnail image.original "x155" upscale=False as thumb %}
-                <a href="{{ product.get_absolute_url }}"><img src="{{ thumb.url }}" alt="{{ product.get_title }}" class=""></a>
-                {% endthumbnail %}
-            {% endwith %}
-            
-            <div class="quickview">
-                <ul>
-                <li><a href="{{ product.get_absolute_url }}" class="quicklook">quicklook</a></li>
-                 
-                </ul>
-            </div>
-        
-        </div>
-    {% endif %}
-        <div class="pro-text">
-        {% purchase_info_for_product request product as session %}
-            <h2>{{ product.get_title|truncatewords:4 }}</h2>
-            <p>
-                {% if product.description %} {{ product.description|safe|truncatewords:10 }} {% endif %}
-                {% include "catalogue/partials/stock_record.html" %}
-            </p>
-            <span>
-                {% iffeature "reviews" %}
-                <p class="star-rating {{ product.rating|as_stars }}">
-                    <i class="icon-star"></i>
-                    <i class="icon-star"></i>
-                    <i class="icon-star"></i>
-                    <i class="icon-star"></i>
-                    <i class="icon-star"></i>
-                </p>
-                {% endiffeature %}
-            </span>
-            <a class="morecolor" href="#">
-                {% with attributes=product.attr.get_all_attributes%}
-                
-                {% for attribute in attributes %}
-                    {% with mycolor=attribute.get_attribute_by_code %}
-                    {{mycolor}}
-                    {% endwith %}
+    <div class="product col-md-3 {% if forloop.counter != 1 %} leftborder {% endif %}">
+        {% if product.primary_image %}
+            <div class="product-img">        
+            {% comment %}        
+                {% for color in product.product_color.select_related %}
+                    {% for colorimage in color.product_image_color.select_related %}
+                        {{ colorimage.original.url }}
+                    {% endfor %}
+                    <a href="{{ product.get_absolute_url }}"><img src="{{ thumb.url }}" alt="{{ product.get_title }}" class=""></a>            
                 {% endfor %}
-                {% endwith %}
-            </a>
+            {% endcomment %}                        
             
-            {% if not product.is_group %}
-                {% include "verecom/catalogue/partials/add_to_basket_form_compact.html" %}
-            {% endif %}
-         
+            {% with image=product.primary_image %}
+                {% thumbnail image.original "150x300" upscale=False as thumb %}
+                <a href="{{ product.get_absolute_url }}">
+                    <img src="
+                        {% if not image.shopbop_image_url %}
+                            {{ thumb.url }}
+                        {% else %}
+                            {{ image.shopbop_image_url }}
+                        {% endif %}"
+                        alt="{{ product.get_title }}"
+                    >
+                </a>
+                {% endthumbnail %}
+            {% endwith %}           
+            </div>
+        {% endif %}
+        <div class="pro-text">
+            <h2>{{ product.get_brand|truncatewords:4 }}</h2>
+            <h2>{{ product.get_title|truncatewords:4 }}</h2>
+            
+            <p class="pro-price">
+                <span>{{ product.stockrecords.select_related.0.currency }}</span>
+                <span>{{ product.stockrecords.select_related.0.price_retail|currency:product.stockrecords.select_related.0.price_currency }}</span>
+            </p>        
+        </div>
+        <div style="clear: both"></div>
+        <div class="color-thumbnail">
+            {% for color in product.product_color.select_related %}
+                {% thumbnail color.color_thumbnail "11x10" upscale=False as thumb %}
+                    <a href="get/product-image/{{ color.id }}">
+                        <img src="{{ thumb.url }}" alt="{{ product.get_title }}" class="">
+                    </a>    
+                {% endthumbnail %}                        
+            {% endfor %}     
         </div>
     </div>
 
