Added product sku

--- a/frobshop/templates/verecom/catalogue/browse.html
+++ b/frobshop/templates/verecom/catalogue/browse.html
@@ -79,7 +79,7 @@
                 </h2>           
             </div>
         {% if products %}
-            <div class="product-con">
+            <div class="product-con" id="pro-list">
                 {% for product in products %}
                     {% include "verecom/partials/product.html" %}
                 {% endfor %}
