--- a/statics/verecom/css/custom.css
+++ b/statics/verecom/css/custom.css
@@ -84,25 +84,86 @@ transition: border 200ms ease 0s;
     padding-top: 10px;
 }
 
-.product-con .leftborder {
-   border-left: 1px solid #ddd;
-}
 
-.product-con .pro-text {
+.product-con .product .info {
 	/*text-align: center;*/
-	padding-top: 15px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 12px;
+}
+#pro-list .brand {
+	color: rgb(0, 0, 0);
+	cursor: auto;
+	display: block;
+	font-family: 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 11px;
+	font-weight: bold;
+	height: 20px;
+	line-height: 20px;
+	list-style-image: none;
+	list-style-position: outside;
+	list-style-type: none;
+	overflow-x: hidden;
+	overflow-y: hidden;
+	text-align: left;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	width: 150px;
 }
 
-.product-con .pro-text h2 {
-	font-size: 16px;
-	padding: 3px;
-	font-family: sans-serif;
-	
+#pro-list .title {
+	color: rgb(0, 0, 0);
+	cursor: auto;
+	display: block;
+	font-family: 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 11px;
+	height: 20px;
+	line-height: 20px;
+	list-style-image: none;
+	list-style-position: outside;
+	list-style-type: none;
+	overflow-x: hidden;
+	overflow-y: hidden;
+	text-align: left;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	width: 150px;
 }
-
-.product-con .color-thumbnail {
-	/*text-align: center;*/
+#pro-list .price {
+	color: rgb(0, 0, 0);
+	cursor: auto;
+	display: inline-block;
+	font-family: 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 11px;
+	height: auto;
+	line-height: 20px;
+	list-style-image: none;
+	list-style-position: outside;
+	list-style-type: none;
+	text-align: left;
+	white-space: normal;
+	padding: 0px !important;
+	/*width: auto;*/
 }
-
-
+#pro-list .leftborder {
+	border-left: 1px solid #000;
+}
 /** End of product category page **/
+
+.colors .color img {
+	display: block;
+	margin: 1px;
+	width: 11px;
+	height: 10px;
+}
+.color {
+	height: auto;
+	width: auto;
+	margin: 0px 2px;
+	border: none;
+}
+.selected {
+	border: 1px solid #dd641d;
+}
+.colors {
+	padding: 2px 0px;
+}
