--- a/frobshop/templates/verecom/partials/product.html
+++ b/frobshop/templates/verecom/partials/product.html
@@ -8,7 +8,7 @@
 
 {% block product %}
 
-    <div class="product col-md-3 {% if forloop.counter != 1 %} leftborder {% endif %}">
+    <div class="product col-md-3">
         {% if product.primary_image %}
             <div class="product-img">        
             {% comment %}        
